--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -29,6 +29,7 @@
       href="../static/styles/8-places.css?cache_id={{ cache_id }}"
     />
     <link rel="icon" href="../static/images/icon.png?cache_id={{ cache_id }}" />
+    <script src="../static/scripts/1-hbnb.js?cache_id={{ cache_id }}"></script>
     <title>HBnB</title>
   </head>
   <body>
@@ -61,7 +62,15 @@
           <div class="popover">
             <ul>
               {% for amenity in amenities %}
-              <li>{{ amenity.name }}</li>
+              <li>
+                <input
+                  type="checkbox"
+                  class="checkbox"
+                  data-id=":amenity_id"
+                  data-name=":amenity_name"
+                />
+                {{ amenity.name }}
+              </li>
               {% endfor %}
             </ul>
           </div>
