--- a/web_dynamic/static/styles/6-filters.css
+++ b/web_dynamic/static/styles/6-filters.css
@@ -51,6 +51,10 @@ button:hover {
     width: 25%;
 }
 
+.checkbox {
+    margin-left: 10px;
+}
+
 .popover {
     visibility: hidden;
     width: 100%;
